--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,5 +58,6 @@
         "ratio": "cpp",
         "iomanip": "cpp",
         "sstream": "cpp"
-    }
+    },
+    "makefile.configureOnOpen": true
 }
